@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2014-08-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/psd.c (WritePSDImage): Fix small stack over-write if more
+than 99 layers are written to PSD format.  Similar to
+CVE-2014-1947 for ImageMagick.  Changed layer naming to use at
+least 4 digits.  Issue was brought to our attention by Rex Dieter
+and change is mostly based on his patch.</li>
+</ul>
+</blockquote>
 <p>2014-08-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
@@ -57,7 +67,7 @@ Transparency lost when converting from GIF to PNG.</li>
 <blockquote>
 * VisualMagickconfigureconfigure.cpp Remove webp when attempting</blockquote>
 <div class="system-message">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 15)</p>
+<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 23)</p>
 Block quote ends without a blank line; unexpected unindent.</div>
 <p>to compile with Visual Studio 6.</p>
 </blockquote>
